<resources>
    <string name="app_name" translatable="false">Lectio</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="profile">Profile</string>
    <string name="my_books">My books</string>
    <string name="add_book">Add book</string>
    <string name="btn_settings" translatable="false">btn_settings</string>
    <string name="image" translatable="false">Image</string>
    <string name="read_books">Read books</string>
    <string name="reading_now">Reading now</string>
    <string name="name_book">Name book</string>
    <string name="author">Author</string>
    <string name="add">Add</string>
    <string name="float_btn_add_book" translatable="false">float_btn_add_book</string>
    <string name="search">Search</string>
    <string name="category_title" translatable="false">Category title</string>

    <string-array name="types">
        <item>Adventure</item>
        <item>Biography</item>
        <item>Business</item>
        <item>Cookbook</item>
        <item>Classic</item>
        <item>Comic book</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Dictionary</item>
        <item>History</item>
        <item>Fantasy</item>
        <item>Historical fiction</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Philosophy</item>
        <item>Poetry</item>
        <item>Romance</item>
        <item>Science fiction</item>
        <item>Science</item>
        <item>Thriller</item>
        <item>Western</item>
  </string-array>

</resources>