<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.andr oid.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/name_book"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_item_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/author"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:textStyle="italic" />


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
