<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addbook.GoToAdding"
    android:id="@+id/go_to_adding">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/search"
        android:ems="100"
        android:hint="@string/search"
        android:inputType="text"
        android:lines="1"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:textColorHint="@color/grey_search"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linear_add_btn"
        app:layout_constraintTop_toBottomOf="@id/search"
        tools:listitem="@layout/type_category">

    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/linear_add_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:text="@string/add"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/float_btn_add_book"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add"
            app:srcCompat="@drawable/ic_baseline_attach_file_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>